seaqt/QtWidgets/gen_qinputdialog.h

typedef struct QInputDialog QInputDialog;
typedef struct QMetaObject QMetaObject;
typedef struct QSize QSize;
typedef struct QWidget QWidget;
QInputDialog* QInputDialog_new(QWidget* parent);
QInputDialog* QInputDialog_new2();
QInputDialog* QInputDialog_new3(QWidget* parent, int flags);
QMetaObject* QInputDialog_metaObject(const QInputDialog* self);
void* QInputDialog_metacast(QInputDialog* self, const char* param1);
struct miqt_string QInputDialog_tr(const char* s);
void QInputDialog_setInputMode(QInputDialog* self, int mode);
int QInputDialog_inputMode(const QInputDialog* self);
void QInputDialog_setLabelText(QInputDialog* self, struct miqt_string text);
struct miqt_string QInputDialog_labelText(const QInputDialog* self);
void QInputDialog_setOption(QInputDialog* self, int option);
bool QInputDialog_testOption(const QInputDialog* self, int option);
void QInputDialog_setOptions(QInputDialog* self, int options);
int QInputDialog_options(const QInputDialog* self);
void QInputDialog_setTextValue(QInputDialog* self, struct miqt_string text);
struct miqt_string QInputDialog_textValue(const QInputDialog* self);
void QInputDialog_setTextEchoMode(QInputDialog* self, int mode);
int QInputDialog_textEchoMode(const QInputDialog* self);
void QInputDialog_setComboBoxEditable(QInputDialog* self, bool editable);
bool QInputDialog_isComboBoxEditable(const QInputDialog* self);
void QInputDialog_setComboBoxItems(QInputDialog* self, struct miqt_array /* of struct miqt_string */  items);
struct miqt_array /* of struct miqt_string */  QInputDialog_comboBoxItems(const QInputDialog* self);
void QInputDialog_setIntValue(QInputDialog* self, int value);
int QInputDialog_intValue(const QInputDialog* self);
void QInputDialog_setIntMinimum(QInputDialog* self, int min);
int QInputDialog_intMinimum(const QInputDialog* self);
void QInputDialog_setIntMaximum(QInputDialog* self, int max);
int QInputDialog_intMaximum(const QInputDialog* self);
void QInputDialog_setIntRange(QInputDialog* self, int min, int max);
void QInputDialog_setIntStep(QInputDialog* self, int step);
int QInputDialog_intStep(const QInputDialog* self);
void QInputDialog_setDoubleValue(QInputDialog* self, double value);
double QInputDialog_doubleValue(const QInputDialog* self);
void QInputDialog_setDoubleMinimum(QInputDialog* self, double min);
double QInputDialog_doubleMinimum(const QInputDialog* self);
void QInputDialog_setDoubleMaximum(QInputDialog* self, double max);
double QInputDialog_doubleMaximum(const QInputDialog* self);
void QInputDialog_setDoubleRange(QInputDialog* self, double min, double max);
void QInputDialog_setDoubleDecimals(QInputDialog* self, int decimals);
int QInputDialog_doubleDecimals(const QInputDialog* self);
void QInputDialog_setOkButtonText(QInputDialog* self, struct miqt_string text);
struct miqt_string QInputDialog_okButtonText(const QInputDialog* self);
void QInputDialog_setCancelButtonText(QInputDialog* self, struct miqt_string text);
struct miqt_string QInputDialog_cancelButtonText(const QInputDialog* self);
QSize* QInputDialog_minimumSizeHint(const QInputDialog* self);
QSize* QInputDialog_sizeHint(const QInputDialog* self);
void QInputDialog_setVisible(QInputDialog* self, bool visible);
struct miqt_string QInputDialog_getText(QWidget* parent, struct miqt_string title, struct miqt_string label);
struct miqt_string QInputDialog_getMultiLineText(QWidget* parent, struct miqt_string title, struct miqt_string label);
struct miqt_string QInputDialog_getItem(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_array /* of struct miqt_string */  items);
int QInputDialog_getInt(QWidget* parent, struct miqt_string title, struct miqt_string label);
double QInputDialog_getDouble(QWidget* parent, struct miqt_string title, struct miqt_string label);
void QInputDialog_setDoubleStep(QInputDialog* self, double step);
double QInputDialog_doubleStep(const QInputDialog* self);
void QInputDialog_textValueChanged(QInputDialog* self, struct miqt_string text);
void QInputDialog_connect_textValueChanged(QInputDialog* self, intptr_t slot);
void QInputDialog_textValueSelected(QInputDialog* self, struct miqt_string text);
void QInputDialog_connect_textValueSelected(QInputDialog* self, intptr_t slot);
void QInputDialog_intValueChanged(QInputDialog* self, int value);
void QInputDialog_connect_intValueChanged(QInputDialog* self, intptr_t slot);
void QInputDialog_intValueSelected(QInputDialog* self, int value);
void QInputDialog_connect_intValueSelected(QInputDialog* self, intptr_t slot);
void QInputDialog_doubleValueChanged(QInputDialog* self, double value);
void QInputDialog_connect_doubleValueChanged(QInputDialog* self, intptr_t slot);
void QInputDialog_doubleValueSelected(QInputDialog* self, double value);
void QInputDialog_connect_doubleValueSelected(QInputDialog* self, intptr_t slot);
void QInputDialog_done(QInputDialog* self, int result);
struct miqt_string QInputDialog_tr2(const char* s, const char* c);
struct miqt_string QInputDialog_tr3(const char* s, const char* c, int n);
void QInputDialog_setOption2(QInputDialog* self, int option, bool on);
struct miqt_string QInputDialog_getText4(QWidget* parent, struct miqt_string title, struct miqt_string label, int echo);
struct miqt_string QInputDialog_getText5(QWidget* parent, struct miqt_string title, struct miqt_string label, int echo, struct miqt_string text);
struct miqt_string QInputDialog_getText6(QWidget* parent, struct miqt_string title, struct miqt_string label, int echo, struct miqt_string text, bool* ok);
struct miqt_string QInputDialog_getText7(QWidget* parent, struct miqt_string title, struct miqt_string label, int echo, struct miqt_string text, bool* ok, int flags);
struct miqt_string QInputDialog_getText8(QWidget* parent, struct miqt_string title, struct miqt_string label, int echo, struct miqt_string text, bool* ok, int flags, int inputMethodHints);
struct miqt_string QInputDialog_getMultiLineText4(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_string text);
struct miqt_string QInputDialog_getMultiLineText5(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_string text, bool* ok);
struct miqt_string QInputDialog_getMultiLineText6(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_string text, bool* ok, int flags);
struct miqt_string QInputDialog_getMultiLineText7(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_string text, bool* ok, int flags, int inputMethodHints);
struct miqt_string QInputDialog_getItem5(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_array /* of struct miqt_string */  items, int current);
struct miqt_string QInputDialog_getItem6(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_array /* of struct miqt_string */  items, int current, bool editable);
struct miqt_string QInputDialog_getItem7(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_array /* of struct miqt_string */  items, int current, bool editable, bool* ok);
struct miqt_string QInputDialog_getItem8(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_array /* of struct miqt_string */  items, int current, bool editable, bool* ok, int flags);
struct miqt_string QInputDialog_getItem9(QWidget* parent, struct miqt_string title, struct miqt_string label, struct miqt_array /* of struct miqt_string */  items, int current, bool editable, bool* ok, int flags, int inputMethodHints);
int QInputDialog_getInt4(QWidget* parent, struct miqt_string title, struct miqt_string label, int value);
int QInputDialog_getInt5(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue);
int QInputDialog_getInt6(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue);
int QInputDialog_getInt7(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue, int step);
int QInputDialog_getInt8(QWidget* parent, struct miqt_string title, struct miqt_string label, int value, int minValue, int maxValue, int step, bool* ok);